--- a/app/src/main/res/layout/devicerow.xml
+++ b/app/src/main/res/layout/devicerow.xml
@@ -2,7 +2,7 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView1"
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="10dip"
         android:layout_gravity="right"
-        android:src="@drawable/icon" />
+        android:src="@drawable/unknown" />
 
     <TextView
         android:id="@+id/textView1"
