--- a/app/src/main/res/menu/menu_control.xml
+++ b/app/src/main/res/menu/menu_control.xml
@@ -1,6 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="nl.hu.zrb.btclient.ControlActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="nl.hu.zrb.theclient.ControlActivity">
     <item android:id="@+id/connect" android:title="connect"
-        android:orderInCategory="10" android:showAsAction="ifRoom" android:icon="@drawable/connect"/>
+        android:orderInCategory="10" app:showAsAction="ifRoom" android:icon="@drawable/connect"/>
 </menu>
